2009-09-12  Al Riddoch  <alriddoch@googlemail.com>

	* configure.ac: Get the interface version right.

2009-09-12  Al Riddoch  <alriddoch@googlemail.com>

	* Atlas/Filters/Makefile.am:
	  Use the right variable from configure for libraries.

2009-09-12  Al Riddoch  <alriddoch@googlemail.com>

	* Atlas/Objects/BaseObject.cpp, Atlas/Objects/BaseObject.h:
	  Move the constructor out of the header, and clean it up a bit.

2009-09-12  Al Riddoch  <alriddoch@googlemail.com>

	* atlas-cpp.spec.in: Catch up with changes in the stable branch.

	* configure.ac: Re-sync with the stable branch.

2009-02-28  Alexey Torkhov  <atorkhov@gmail.com>

	* Atlas/Filter.cpp: Add <cstdio> include to have EOF defined.

2008-11-26  Al Riddoch  <alriddoch@googlemail.com>

	* Atlas/Codecs/Makefile.am, Atlas/Filters/Makefile.am,
	  Atlas/Message/Makefile.am, Atlas/Net/Makefile.am,
	  Atlas/Objects/Makefile.am: Refer to other libraries via
	  top_builddir rather than using ..

2008-11-26  Al Riddoch  <alriddoch@googlemail.com>

	* Atlas/Codecs/Makefile.am, Atlas/Filters/Makefile.am,
	  Atlas/Message/Makefile.am, Atlas/Net/Makefile.am,
	  Atlas/Objects/Makefile.am: Make the libraries link to the others
	  they depend on so using them is easier and --as-needed can
	  be used.

	* Atlas/Makefile.am: Change the subdirectory build order so that
	  the top level builds first.

2008-06-01  Alexey Torkhov  <atorkhov@gmail.com>

	* Atlas/Filter.cpp: Add <cstring> include as required by GCC 4.3.

	* tools/atlas_convert.cpp: Add <cstdlib> include as required by
	  GCC 4.3.

2007-09-24  Al Riddoch  <alriddoch@zepler.org>

	* benchmark/Objects2_Move.cpp, benchmark/Objects3_Move.cpp:
	  Remove a nasty C style cast that was causing warnings.

2007-09-24  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/objects2.cpp: Remove a nasty C style cast that was
	  causing warnings.

2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/objects1.cpp: Remove a nasty C style cast that was