@@ -1,5 +1,10 @@
 2009-09-12  Al Riddoch  <alriddoch@googlemail.com>
 
+	* Atlas/Filter.cpp: Use the C++ eof convention, rather than using
+	  EOF from a C header.
+
+2009-09-12  Al Riddoch  <alriddoch@googlemail.com>
+
 	* configure.ac: Get the interface version right.
 
 2009-09-12  Al Riddoch  <alriddoch@googlemail.com>
